Add .env.local 1753676989556

--- a/.env.local
+++ b/.env.local
@@ -2,13 +2,13 @@ JWT_SECRET=your_very_strong_secret_key_here_change_this_in_production_12345
 
 # NextAuth Configuration
 NEXTAUTH_URL=http://localhost:8000
-NEXTAUTH_SECRET=your_nextauth_secret_key_here_change_this_in_production
+NEXTAUTH_SECRET=your_very_strong_secret_key_here_change_this_in_production_12345
 
-# Google OAuth
-GOOGLE_CLIENT_ID=your_google_client_id_here
-GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+# Google OAuth (Optional - remove these lines if not using)
+# GOOGLE_CLIENT_ID=your_google_client_id_here
+# GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 
-# Microsoft OAuth
-MICROSOFT_CLIENT_ID=your_microsoft_client_id_here
-MICROSOFT_CLIENT_SECRET=your_microsoft_client_secret_here
-MICROSOFT_TENANT_ID=common
+# Microsoft OAuth (Optional - remove these lines if not using)
+# MICROSOFT_CLIENT_ID=your_microsoft_client_id_here
+# MICROSOFT_CLIENT_SECRET=your_microsoft_client_secret_here
+# MICROSOFT_TENANT_ID=common
